force-app/main/default/objects/Account_Credit_Approval__c/Account_Credit_Approval__c.object-meta.xml
<CustomObject>
    <description>junction for account credit approvals by office location</description>
    <label>Account Credit Approval</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Credit Approval ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Credit Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>