force-app/main/default/objects/Account_Credit_Approval__c/fields/Account_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Limit__c</fullName>
    <label>Account Credit Limit</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>