force-app/main/default/objects/Account_Credit_Approval__c/fields/Account_Safari_Office_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Safari_Office_Key__c</fullName>
    <formula>IF(CES_Office__r.Customer_Number__c == &#39;HOU&#39; &amp;&amp; NOT(ISBLANK(Account__r.HOU_ID__c))
  , &#39;HOU-&#39; &amp; Account__r.HOU_ID__c 
  , IF(CES_Office__r.Customer_Number__c == &#39;LIVE&#39; &amp;&amp; NOT(ISBLANK(Account__r.Live_ID__c))
      , &#39;LIVE-&#39; &amp; Account__r.Live_ID__c 
      , IF(CES_Office__r.Customer_Number__c == &#39;MPLS&#39; &amp;&amp; NOT( ISBLANK( Account__r.MPLS_ID__c))
          , &#39;MPLS-&#39; &amp; Account__r.MPLS_ID__c  
          , IF(CES_Office__r.Customer_Number__c == &#39;STL&#39; &amp;&amp; NOT( ISBLANK( Account__r.STL_ID__c))
              , &#39;STL-&#39; &amp; Account__r.STL_ID__c 
              , null
            )
        )
    )
)</formula>
    <label>Account Safari Office Key</label>
    <type>Text</type>
</CustomField>