force-app/main/default/objects/Account_Credit_Approval__c/fields/Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>Case Safe ID</label>
    <type>Text</type>
</CustomField>