force-app/main/default/objects/Account_Credit_Approval__c/fields/CES_Office__c.field-meta.xml
<CustomField>
    <fullName>CES_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Credit Approvals (CES Office)</relationshipLabel>
    <relationshipName>Account_Credit_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>