force-app/main/default/objects/Account_Credit_Approval__c/fields/Credit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval__c</fullName>
    <label>Credit Approval</label>
    <referenceTo>Credit_Request__c</referenceTo>
    <relationshipLabel>Account Credit Approvals</relationshipLabel>
    <relationshipName>Account_Credit_Approvals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>