force-app/main/default/objects/Account_Credit_Approval__c/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <formula>TEXT(Credit_Approval__r.Credit_Type__c)</formula>
    <label>Credit Type</label>
    <type>Text</type>
</CustomField>