force-app/main/default/objects/Account_Credit_Approval__c/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <formula>Credit_Approval__r.DUNS_Number__c</formula>
    <label>DUNS Number</label>
    <type>Text</type>
</CustomField>