force-app/main/default/objects/Account_Credit_Approval__c/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <formula>Credit_Approval__r.Euhler_RFC__c</formula>
    <label>Insurance Number</label>
    <type>Text</type>
</CustomField>