force-app/main/default/objects/Account_Credit_Approval__c/fields/Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Code__c</fullName>
    <formula>CES_Office__r.Customer_Number__c</formula>
    <label>Office Code</label>
    <type>Text</type>
</CustomField>