force-app/main/default/objects/Account_Credit_Approval__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <formula>Credit_Approval__r.SIC_Code__c</formula>
    <label>SIC Code</label>
    <type>Text</type>
</CustomField>