force-app/main/default/objects/Account_Credit_Approval__c/fields/Sync_Batch__c.field-meta.xml
<CustomField>
    <fullName>Sync_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Batch</label>
    <referenceTo>Sync_Batch__c</referenceTo>
    <relationshipLabel>Account Credit Approvals</relationshipLabel>
    <relationshipName>Account_Credit_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>