force-app/main/default/objects/Account_Credit_Approval__c/fields/Sync_Field_Values_Created__c.field-meta.xml
<CustomField>
    <fullName>Sync_Field_Values_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Field Values Created</label>
    <type>Checkbox</type>
</CustomField>